# realtime_accompanist

./: .gitignore  README.md  app.js  pyproject.toml  styles.css
.github/workflows/: ci-pages.yml
docs/: PROJECT_CONTEXT.md  algorithm_notes.md  architecture.md  codex_tasks.md  comparison.md  data_structures.md  feasibility.md  goal.md  initial-plan.md  live_demo.md  mvp_plan.md  progress.md  requirements.md  ui_spec.md
scripts/: run_dev.ps1
site/: index.html  styles.css
src/realtime_accompanist/: __init__.py
src/realtime_accompanist/application/: session.py
src/realtime_accompanist/domain/: __init__.py  accompaniment.py  chord_estimator.py  clock.py  key_estimator.py  melody_buffer.py  models.py  progression_smoother.py  theory.py
src/realtime_accompanist/web/: __init__.py  app.py
src/realtime_accompanist/web/static/: app.js  index.html  styles.css
tests/: test_accompaniment_engine.py  test_chord_estimator.py  test_clock.py  test_key_estimator.py  test_melody_buffer.py  test_progression_smoother.py  test_session_api.py  test_static_site.py  test_theory.py
